force-app/main/default/objects/Equipment_Rental__c/Equipment_Rental__c.object-meta.xml
<CustomObject>
    <label>Equipment Rental</label>
    <nameField>
        <displayFormat>RNT-{00000}</displayFormat>
        <label>Equipment Rental Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Rentals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>