force-app/main/default/objects/Equipment_Rental__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Equipment Rentals</relationshipLabel>
    <relationshipName>Equipment_Rentals</relationshipName>
    <type>Lookup</type>
</CustomField>