force-app/main/default/objects/Equipment_Rental__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Equipment__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Rental_Fleet</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Equipment Rentals</relationshipLabel>
    <relationshipName>Equipment_Rentals</relationshipName>
    <type>Lookup</type>
</CustomField>