force-app/main/default/objects/Equipment_Rental__c/fields/Expected_Return__c.field-meta.xml
<CustomField>
    <fullName>Expected_Return__c</fullName>
    <label>Expected Return</label>
    <type>DateTime</type>
</CustomField>