force-app/main/default/objects/Equipment_Rental__c/fields/Rental_Start__c.field-meta.xml
<CustomField>
    <fullName>Rental_Start__c</fullName>
    <label>Rental Start</label>
    <type>DateTime</type>
</CustomField>